<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/conta"
            />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Historico"
            />
        <item
            android:id="@+id/nav_option"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Opcoes"/>

    </group>

    <item android:title="@string/sistema">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/Sobre"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/sair"/>
        </menu>
    </item>

</menu>
