<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity"
    android:background="#09999A">

    <LinearLayout
        android:id="@+id/LayoutCad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/ScrollViewCad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <LinearLayout
                android:id="@+id/ScrollCad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="148dp"
                    android:layout_height="153dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="26dp"
                    app:srcCompat="@mipmap/ic_launcher_ta_chegando_layer" />

                <TextView
                    android:id="@+id/textCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="CADASTRO"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNome"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/nome_hint"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName" />



                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/email_hint"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextTelefone"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/telefone_hint"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone" />


                <EditText
                    android:id="@+id/editTextCEP"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/cep_hint"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPostalAddress" />



                <EditText
                    android:id="@+id/editTextEndereco"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/endereco_hint"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName" />



                <EditText
                    android:id="@+id/editTextNumeroRes"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/numero_hint"
                    android:ems="5"
                    android:gravity="center"
                    android:inputType="text" />


                <EditText
                    android:id="@+id/editTextComplemento"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/complemento_hint"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName" />



                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/password"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPassword" />


                <EditText
                    android:id="@+id/editTextPasswordConfirm"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/passwordconfirm"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/bt_ConfirmarCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/edittext_rounded"
                    android:gravity="center"
                    android:text="CONFIRMAR" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>