<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09999A"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_tela_login"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/ScrollViewCad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/linear_tela_elemento_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_login"
                    android:layout_width="355dp"
                    android:layout_height="292dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="30dp"
                    android:contentDescription="LOGO"
                    android:src="@mipmap/ic_launcher_ta_chegando_layer" />


                <Button
                    android:id="@+id/btn_app"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="52dp"
                    android:textColor="@color/white"
                    android:background="@drawable/edittext_rounded"
                    android:text="@string/acessar"
                    android:textAlignment="center" />
                <Button
                    android:id="@+id/sobrenos"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginBottom="52dp"
                    android:background="@drawable/edittext_rounded"
                    android:text="@string/sobrenos"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:layout_marginTop="75dp"
                    android:clickable="true"
                    android:text="@string/version"
                    android:textAlignment="center"
                    android:textColorLink="@drawable/common_google_signin_btn_text_light"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />




            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>