<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_conta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".ContaActivity">



    <ScrollView
        android:layout_marginTop="@dimen/nav_header_height1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginTop="@dimen/nav_header_height1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="5dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:id="@+id/img_conta"
           android:src="@mipmap/ic_launcher" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_galery"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/edittext_rounded"
            android:text="@string/galery"/>
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_camera"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_rounded"
            android:text="@string/camera"/>

        </LinearLayout>
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirmphoto"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_rounded"
            android:text="@string/confirm"/>

        <TextView
            android:id="@+id/tv_dataPer"
            android:layout_gravity="center"
            android:text="@string/DataPer"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_nomeconta"
                android:layout_gravity="center"
                android:text="title"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_ender"
                android:layout_gravity="center"
                android:text="title"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_number"
            android:layout_gravity="center"
            android:text="title"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Complemento"
            android:layout_gravity="center"
            android:text="title"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/cep"
            android:layout_gravity="center"
            android:text="title"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/telephone"
            android:layout_gravity="center"
            android:text="title"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/toolbar_ext"
        />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu_principal"/>

</androidx.drawerlayout.widget.DrawerLayout>